# python-voice-assistant-elevenlabs

./: .gitignore  README.md  hey_neel.ppn  pyproject.toml  requirements.txt
src/: app.py  audio_io.py  config.py  controller.py  gui.py  logger.py  nlp_groq.py  nlp_local.py  settings.py  stt_faster_whisper.py  stt_openai.py  stt_whisper_local.py  tools.py  tts_elevenlabs.py  tts_gtts.py  voice_assistant.py  wake_word.py
